@@ -1,4 +1,4 @@
-2015-06-19  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2015-06-20  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 0.11.0 released
         =========================
@@ -6,6 +6,7 @@
         Correct model gradient computation
         Correct check of pixel containment in sky map (GSkymap::contains())
         Do only search in users pfiles if PFILES environment variable is not set
+        Correct GModelSpatialDiffuseConst::mc() method (#1480)
         Add is_valid() method to GCTARoi and write keywords only if ROI is valid (#1476)
         Increased number of integration iterations for energy dispersion (#1472)
         Add GOptimizerLM::logger() method, logger constructor takes pointer (#1471)
